src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__budget_prespawn__budget_prespawn_modal_warn_shows_projected_and_limit.snap
---
source: src/tui/snapshot_tests/budget_prespawn.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"               ╔════════════════[ Budget Alert ]════════════════╗               "
"               ║Pre-spawn cost crosses the budget alert threshol║               "
"               ║  Projected total: $42.00                       ║               "
"               ║  Limit:           $50.00                       ║               "
"               ║  [y]es [n]o [s]kip                             ║               "
"               ║                                                ║               "
"               ║                                                ║               "
"               ╚════════════════════════════════════════════════╝               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
